[package]
name = "rustypathfinder"
version = "0.0.1"
edition = "2021"
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustypathfinder"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]
